# orni-models

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  fly.toml  render.yaml
.github/workflows/: build-and-deploy.yml
crates/orni-models-api/: Cargo.toml
crates/orni-models-api/src/: auth.rs  config.rs  error.rs  main.rs  schema.rs  security.rs  state.rs
crates/orni-models-api/src/routes/: ai.rs  api_keys.rs  auth.rs  chat.rs  creator.rs  creators.rs  discovery.rs  identity.rs  marketplace.rs  mod.rs  models.rs  openai_compat.rs  payments.rs
crates/orni-models-api/src/services/: inference.rs  mod.rs  node_resolver.rs  settlement.rs  solana.rs  stripe.rs
crates/orni-models-types/: Cargo.toml
crates/orni-models-types/src/: lib.rs
migrations/: 20240101000000_initial_schema.sql  20240102000000_add_did_link.sql  20240103000000_add_self_hosted_node.sql  20240104000000_add_email_auth_and_stripe.sql  20240105000000_add_marketplace_features.sql  20240106000000_seed_platform_models.sql  20240107000000_add_api_keys.sql
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/account/: page.tsx
web/src/app/compare/: page.tsx
web/src/app/creator/: page.tsx
web/src/app/creator/models/new/: page.tsx
web/src/app/creators/[slug]/: CreatorProfileClient.tsx  page.tsx
web/src/app/models/: page.tsx
web/src/app/models/[slug]/: ModelDetailClient.tsx  page.tsx
web/src/components/: ChatInterface.tsx  CompareView.tsx  ConversationSidebar.tsx  EmailAuth.tsx  KinakutaLogo.tsx  ModelCard.tsx  Navbar.tsx  ReviewSection.tsx  StarRating.tsx
web/src/components/ui/: Badge.tsx  GlassCard.tsx  GlassInput.tsx  GlowButton.tsx
web/src/lib/: api.ts  wallet-provider.tsx
