[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth / Crypto
jsonwebtoken = "9"
ed25519-dalek = { version = "2", features = ["rand_core"] }
bs58 = "0.5"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
hmac = "0.12"
curve25519-dalek = { version = "4", features = ["digest"] }
borsh = "0.10"

# Solana (from SAID repo)
said-solana = { git = "https://github.com/anndrrson/said.git", branch = "main" }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Time & IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Password hashing
argon2 = { version = "0.5", features = ["std"] }

# Utils
thiserror = "2"
anyhow = "1"
dotenvy = "0.15"
urlencoding = "2"
