[package]
name = "orni-models-api"
version.workspace = true
edition.workspace = true

[dependencies]
orni-models-types = { path = "../orni-models-types" }

# Web
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Auth / Crypto
jsonwebtoken = { workspace = true }
ed25519-dalek = { workspace = true }
bs58 = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }

# Password hashing
argon2 = { workspace = true }

# HTTP
reqwest = { workspace = true }

# Time & IDs
chrono = { workspace = true }
uuid = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utils
thiserror = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
urlencoding = { workspace = true }

# Solana payments
said-solana = { workspace = true }
